// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
    }
  }
>
  <Text
    style={
      Object {
        "marginBottom": 10,
        "marginLeft": 10,
      }
    }
  >
    some Label
  </Text>
  <ForwardRef(Themed.Input)
    errorMessage={null}
    errorStyle={
      Object {
        "color": "red",
        "fontSize": 11,
      }
    }
    inputContainerStyle={
      Object {
        "borderColor": "#ccc",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 5,
        "padding": 3,
      }
    }
    onChangeText={[MockFunction]}
  />
</View>
`;

exports[`renders correctly after touched and get some error 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
    }
  }
>
  <Text
    style={
      Object {
        "marginBottom": 10,
        "marginLeft": 10,
      }
    }
  >
    some Label
  </Text>
  <ForwardRef(Themed.Input)
    errorMessage="something wrong"
    errorStyle={
      Object {
        "color": "red",
        "fontSize": 11,
      }
    }
    inputContainerStyle={
      Object {
        "borderColor": "#ccc",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 5,
        "padding": 3,
      }
    }
    onChangeText={[MockFunction]}
  />
</View>
`;
